src/app/team-logo/team-logo.component.scss
.team-logo {
    width: 40px;
    height: 40px;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
}

.team-logo-container {
    display: flex;
    justify-content: space-between;
}

.team-name {
  font-family: 'Montserrat';
  color: white;
  font-size: 18px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;

  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 10px;
}

.team-container {
    background-color: rgba(30, 30, 30, 0.8);
    border-radius: 4px;
    display: flex;
    justify-content: space-around;
    width: 150px;
}

